[package]
name = "imgui-dx9-renderer"
version = "0.8.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2021"
description = "DirectX 9 renderer for the imgui crate"
homepage = "https://github.com/Veykril/imgui-dx9-renderer"
repository = "https://github.com/Veykril/imgui-dx9-renderer"
license = "MIT"
readme = "README.md"
categories = ["gui", "rendering"]

[dependencies]
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
] }
imgui = "0.8.2"

[dev-dependencies]
imgui = "0.8.2"
imgui-winit-support = "0.8.2"
raw-window-handle = "0.3.0"
winit = "0.25.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
