[package]
name = "imgui-dx9-renderer"
version = "0.10.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2021"
description = "DirectX 9 renderer for the imgui crate"
homepage = "https://github.com/Veykril/imgui-dx9-renderer"
repository = "https://github.com/Veykril/imgui-dx9-renderer"
license = "MIT"
readme = "README.md"
categories = ["gui", "rendering"]

[dependencies]
imgui = "0.10.0"
windows = { version = "0.46.0", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
] }

[dev-dependencies]
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
raw-window-handle = "0.5.0"
windows = { version = "0.46.0", features = ["Win32_Graphics_Gdi"] }
winit = "0.27.5"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
